-----------------------------------------------------------------------------------------
Data Crow version 4.7.0                                            Released on 2023-03-xx
-----------------------------------------------------------------------------------------

[New]
- Archive.org software online search.

[Changed]
- Now allowing for references to be made to main modules without removing the referenced
  module from the module menu.
  (https://datacrow.org/2023/02/17/relating-items-what-data-crow-4-7-will-bring-to-you/)
- Now allowing users to alter a module to create a reference to the module itself; 
  allowing for, for example, a field called related software item on a software item.
- Hierarchy view for containers will now show all items per container + the items of 
  children of the selected container.
- Small performance increase for the MobyGames.com search.
- Added two new fields to the Book module: translated from & original title
  
[Fixed]
- Errors for Data Crow client in case the server was not responding when logging on.
- Filtering on references didn't work (sometimes).
- Module disappears completely when a reference field is added referencing itself
  (reference field on software pointing to software).
- The log window (CTRL+L) did not show latest entries.
- The server edition sometimes gave errors on saving new items.
- Ratings for Mobygames.com online search were incorrect.
- Errors when retrieving back covers when performing an online searching using 
  The Movie Database.


-----------------------------------------------------------------------------------------
Data Crow version 4.6.1                                            Released on 2023-02-12
-----------------------------------------------------------------------------------------

[Fixed]
- The module files have been corrected. They were corrupted in version 4.6.


-----------------------------------------------------------------------------------------