@@ -46,6 +46,7 @@ import org.datacrow.core.clients.IClient;
 import org.datacrow.core.log.DcLogManager;
 import org.datacrow.core.modules.DcModules;
 import org.datacrow.core.modules.upgrade.ModuleUpgrade;
+import org.datacrow.core.modules.upgrade.ModuleUpgradeResult;
 import org.datacrow.core.security.SecuredUser;
 import org.datacrow.core.server.Connector;
 import org.datacrow.core.settings.DcSettings;
@@ -337,8 +338,9 @@ public class DcServer implements Runnable, IStarterClient, IClient {
                 
                 logger.info(new Date() + " Starting Data Crow Server.");
                 
-                new ModuleUpgrade().upgrade();
+                ModuleUpgradeResult mur = new ModuleUpgrade().upgrade();
                 DcModules.load();
+                DcModules.updateModuleSetting(mur);
                 
     			try {
     			    DatabaseManager.getInstance().doDatabaseHealthCheck();
