@@ -2,8 +2,15 @@
 Data Crow version 4.7.0                                            Released on 2023-03-xx
 -----------------------------------------------------------------------------------------
 
+TODO:
+- Make sure new fields are ticked for the online search.
+
 [New]
 - Archive.org software online search.
+- Added a new Look and Feel: FlatLaf Light. This is a more modern Look and Feel which is
+  still actively developed (https://www.formdev.com/flatlaf/)
+  This will be the default Look and Feel for Data Crow from now on (for new installations).
+  Find it in Settings > Look and Feel
 
 [Changed]
 - Now allowing for references to be made to main modules without removing the referenced
